# jogen

./: .editorconfig  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/cli/src/commands/: actions.rs  init.rs  mod.rs  plumbing.rs  tools.rs
crates/core/: Cargo.toml
crates/core/src/: graph.rs  hydrator.rs  indexer.rs  init.rs  lib.rs  merge.rs  object_store.rs  ref_store.rs  semantic.rs
crates/core/src/objects/: blob.rs  directory.rs  mod.rs  snapshot.rs
docs/: 01_PHILOSOPHY.md  02_HOW_IT_WORKS.md
