[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fabio Carpinato"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
